# stock-play-manager

./: pyproject.toml
stock_play_manager/: stock_play_manager.py
